# at-cryptoauth-rs

./: .gitmodules  Cargo.toml  README.md  memory.x  openocd.cfg  openocd.gdb  rust-toolchain.toml  slot-config-helper.rs
.github/workflows/: ci.yml
cryptoauthlib-sys/: .gitignore  Cargo.toml  build.rs  openocd.gdb
cryptoauthlib-sys/.cargo/: config
cryptoauthlib-sys/examples/: command.rs  crc.rs  initial_state.rs  response.rs  sha.rs  tngtls.rs
cryptoauthlib-sys/src/: facade.rs  hal.rs  lib.rs
examples/: raspberrypi_atecc608.rs  stm32l4xx_atecc608.rs
examples/raspberrypi/: Cargo.toml
examples/raspberrypi/src/: main.rs
examples/raspberrypi_atecc608/: Cargo.toml
examples/raspberrypi_atecc608/src/: main.rs
examples/rp2040/: Cargo.toml
examples/rp2040/src/: main.rs
src/: client.rs  clock_divider.rs  command.rs  datalink.rs  error.rs  lib.rs  memory.rs  packet.rs  parameter.rs  tls.rs  tngtls.rs
src/calib/: command.rs  mod.rs  packet.rs  parameter.rs
src/cert/: attr.rs  builder.rs  certificate.rs  compressed.rs  ext.rs  macros.rs  mod.rs  name.rs  pem.rs  request.rs  serial_number.rs  time.rs
src/cert/testdata/: device.der  device.pem
src/client/: aes.rs  memory.rs  mod.rs  random.rs  sha.rs  signing.rs  verifying.rs
src/datalink/: hal.rs  mod.rs
