[package]
name = "cryptoauthlib-sys"
version = "0.1.0"
authors = ["Kei Shirakizawa <ks@blackbird.online>"]
edition = "2018"

[dependencies.embedded-hal]
version = "0.2.3"
features = ["unproven"]

[build-dependencies]
bindgen = "0.55.1"
cmake = "0.1"

[dev-dependencies]
cortex-m = "0.6.3"
cortex-m-rt = "0.6.12"
cortex-m-semihosting = "0.3.5"
panic-halt = "0.2.0"
panic-semihosting = "0.5.0"

[dependencies.stm32l4xx-hal]
git = "https://github.com/BlackbirdHQ/stm32l4xx-hal.git"
branch = "i2c-enhancement-pr-to-be-made"
features = ["rt", "stm32l4x5"]
