[package]
name = "cryptoauthlib-sys"
version = "0.1.0"
authors = ["Kei Shirakizawa <ks@blackbird.online>"]
edition = "2018"

[build-dependencies]
bindgen = "0.55.1"
cmake = "0.1"

[dependencies]
embedded-hal = { version = "0.2.3", features = ["unproven"] }

[dev-dependencies]
crc = "2.0.0-rc.1"

[target.'cfg(all(target_arch = "arm", target_os = "none"))'.dev-dependencies]
cortex-m = "0.6.3"
cortex-m-rt = "0.6.12"
cortex-m-semihosting = "0.3.5"
panic-halt = "0.2.0"
panic-semihosting = "0.5.0"

[target.'cfg(all(target_arch = "arm", target_os = "none"))'.dependencies]
stm32l4xx-hal = { git = "https://github.com/stm32-rs/stm32l4xx-hal.git", features = ["rt", "stm32l4x5"] }

[target.'cfg(all(target_arch = "arm", target_os = "linux"))'.dependencies]
env_logger = { version = "0.8.1", optional = true }
linux-embedded-hal = { version = "0.3.0", optional = true }
log = { version = "0.4.0", optional = true }
openssl = { version = "0.10.30", features = ["vendored"], optional = true }

[features]
std = ["env_logger", "linux-embedded-hal", "log", "openssl"]
