[package]
name = "raspberrypi_atecc608"
version = "0.1.0"
authors = ["Kei Shirakizawa <ks@blackbird.online>"]
edition = "2018"

[dependencies]
log = "0.4.0"
env_logger = "0.8.1"
openssl = { version = "0.10.30", features = ["vendored"] }

[dependencies.at-cryptoauth]
path = "../.."
[dependencies.linux-embedded-hal]
version = "0.3.0"
[dependencies.embedded-hal]
version = "0.2.3"
features = ["unproven"]
